ADD: Last Commit - Added new Font

--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ ul{
 
 body{
     background-color: #eeeeee;
+    font-family: 'Roboto', sans-serif;
 }
 
 /* Header */
@@ -25,7 +26,7 @@ body{
 .header-title{
     display: inline-block;
     font-size: 50px;
-    font-weight: 400;
+    font-weight: 700;
     margin-left: 5px;
     vertical-align: bottom;
 }
@@ -56,6 +57,7 @@ body{
     cursor: pointer;
     border: none;
     border-radius: 5px;
+    font-weight: 700;
 }
 
 .buttons:hover{
@@ -101,6 +103,7 @@ body{
 .highlight{
     padding: 3px 10px;
     font-size: 12px;
+    font-weight: 700;
     border-radius: 10px;
     color: #ffffff;
     vertical-align: super;
